added hyphen to punctuation ignore list, added the link.get('href') to bypass issues with link.href not propperly representing href values and tested percent word evaluation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["https://www.google.com", "2"],
+            "args": ["https://artworksbarbados.com", "1"],
             "console": "integratedTerminal"
         }
     ]
