Added the ability to limit the web spider to a single domain

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["https://artworksbarbados.com", "1"],
+            "args": ["graph", "-r", "https://www.artworksbarbados.com", "-d", "-1"],
             "console": "integratedTerminal"
         }
     ]
